# thumbforge-krita-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  thumbforge-portable.spec  thumbforge.spec
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: pr-title.yml  release.yml  tests.yml
krita-plugin/: README.md  thumbforge_krita.desktop
krita-plugin/thumbforge_krita/: Manual.html  __init__.py  csv_io.py  dock.py  exporter.py  logging_utils.py  models.py  project_store.py  table_data.py  text_replace.py  update_checker.py  validation.py  version.py
scripts/: install-krita-plugin.ps1  package-krita-plugin.ps1  protect-main-branch.ps1
src/core/: csv_io.py  kra_parser.py  kra_writer.py  krita_exporter.py  project.py  renderer.py  validation.py
src/ui/: main_window.py  preview_widget.py  variables_table.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: test_csv_io.py  test_kra_parser.py  test_kra_writer.py  test_krita_exporter.py  test_krita_plugin.py  test_renderer.py  test_support.py  test_validation.py
